Updated UI components

--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Entities\ComponentNotFoundException.cs" />
     <Compile Include="Entities\Components\Internal\IDestroyedListener.cs" />
+    <Compile Include="Entities\Components\Internal\IInterfaceComponent.cs" />
     <Compile Include="Entities\Components\UI\TextXAlignment.cs" />
     <Compile Include="Entities\Components\UI\TextYAlignment.cs" />
     <Compile Include="Entities\Components\UI\UICheckButtonTextures.cs" />
