--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -179,6 +179,7 @@
     <Compile Include="System\Resources\InvalidTextureIdException.cs" />
     <Compile Include="System\Resources\SoundManager.cs" />
     <Compile Include="System\StateApplication\Managers\StateManager.cs" />
+    <Compile Include="System\Types\StarMapCollider.cs" />
     <Compile Include="System\Types\UIAxis.cs" />
     <Compile Include="System\Types\UICoordinates.cs" />
     <Compile Include="System\Input\UserInputAction.cs" />
@@ -187,6 +188,7 @@
     <Compile Include="System\Resources\TextureManager.cs" />
     <Compile Include="System\Input\UserInputService.cs" />
     <Compile Include="System\Input\UserInterfaceAction.cs" />
+    <Compile Include="System\Utility\AndromedaBinaryUtil.cs" />
     <Compile Include="System\Utility\Extensions.cs" />
     <Compile Include="System\Utility\MathUtil.cs" />
     <Compile Include="System\Types\NumberRange.cs" />
