--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -180,6 +180,7 @@
     <Compile Include="System\Resources\SoundManager.cs" />
     <Compile Include="System\StateApplication\Managers\StateManager.cs" />
     <Compile Include="System\Types\StarMapCollider.cs" />
+    <Compile Include="System\Types\StarMapColliderInfo.cs" />
     <Compile Include="System\Types\UIAxis.cs" />
     <Compile Include="System\Types\UICoordinates.cs" />
     <Compile Include="System\Input\UserInputAction.cs" />
