--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -77,6 +77,7 @@
     <Compile Include="System\Application\WindowStyle.cs" />
     <Compile Include="System\Debug.cs" />
     <Compile Include="System\DelayedAction.cs" />
+    <Compile Include="System\Input\ICastable.cs" />
     <Compile Include="System\Input\ITextInput.cs" />
     <Compile Include="System\Input\UserInputManager.InputBinding.cs" />
     <Compile Include="System\Input\UserInputManager.InputBindingAction.cs" />
