--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -208,6 +208,16 @@
     <Folder Include="Entities\Components\UI\Enums\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>xcopy /y "$(SolutionDir)lib\csfml-audio-2.dll" .
+xcopy /y "$(SolutionDir)lib\csfml-window-2.dll" .
+xcopy /y "$(SolutionDir)lib\csfml-system-2.dll" .
+xcopy /y "$(SolutionDir)lib\csfml-graphics-2.dll" .</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
