--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -85,6 +85,7 @@
     <Compile Include="System\DelayedAction.cs" />
     <Compile Include="System\Input\ICastable.cs" />
     <Compile Include="System\Input\ITextInput.cs" />
+    <Compile Include="System\Input\ITextObject.cs" />
     <Compile Include="System\Input\UserInputManager.InputBinding.cs" />
     <Compile Include="System\Input\UserInputManager.InputBindingAction.cs" />
     <Compile Include="System\Legacy\ILegacyComponent.cs" />
