--- a/Andromeda.csproj
+++ b/Andromeda.csproj
@@ -102,6 +102,7 @@
     <Compile Include="System\StateApplication\InterfaceView.cs" />
     <Compile Include="System\StateApplication\InterfaceViewSingleton.cs" />
     <Compile Include="System\StateApplication\LightGameState.cs" />
+    <Compile Include="System\Types\ColorRange.cs" />
     <Compile Include="System\Types\IntNumberRange.cs" />
     <Compile Include="System\Types\INumberRange.cs" />
     <Compile Include="System\Types\Sequences\ColorSequence.cs" />
